# CHttpDownloader

./: .gitignore  CMakeLists.txt  Structure.md  main.c  test.c
include/: common.h  config.h  download.h  http.h  https.h  menu.h  multithread.h  net.h  parser.h  progress.h  settings.h  test.h  utils.h
src/: config.c  download.c  http.c  https.c  menu.c  multithread.c  net.c  parser.c  progress.c  test.c  utils.c
